--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
+html,body{
+    font-size: 62.5%;
+}
+
 body{
     width: 100%;
     height: 100vh;
@@ -17,20 +21,20 @@ body{
 
 .calculator{
        border: 1px solid #717377;
-       padding:20px;
-       border-radius: 16px;
+       padding:2rem;
+       border-radius: 1.6rem;
        background:transparent;
        box-shadow: 0px 3px 15px rgba(113,115,119,0.5);
 }
 
 input{
-    width: 320px;
+    width: 32rem;
     border: none;
-    padding: 24px;
-    margin:10px;
+    padding: 2.4rem;
+    margin:1rem;
     background: transparent;
     box-shadow:0px 3px 15px rgba(84,84,84,0.1);
-    font-size: 40px;
+    font-size: 4rem;
     text-align: right;
     cursor: pointer;
     color:#ffffff;
@@ -41,13 +45,13 @@ input::placeholder{
 }
 button{
     border: none;
-    width: 60px;
-    height: 60px;
-    margin: 10px;
+    width: 6rem;
+    height: 6rem;
+    margin: 1rem;
     border-radius: 50%;
     background: transparent;
     color: #ffffff;
-    font-size: 20px;
+    font-size: 2rem;
     box-shadow: -8px -8px 15px rgba(255,255,255,0.3);
     cursor:pointer;
     
@@ -66,3 +70,31 @@ h2{
    display: flex;
    text-align: center;
 }
+
+/*****************start media query**************/
+@media (max-width: 1200px) {
+    html,body{
+        font-size: 55%;
+    }
+  }
+
+
+@media (max-width: 992px) {
+    html,body{
+        font-size: 50%;
+    }
+  }
+
+
+@media (max-width: 767px) {
+    html,body{
+        font-size: 45%;
+    }
+  }
+
+
+@media (max-width: 575px) {
+    html,body{
+        font-size: 40%;
+    }
+  }
